# chatgpt4bot

./: .breakpoints  .env  .env.example  .gitignore  Dockerfile  README.md  create_db.sh  create_mysql_config_table.sql  create_mysql_db.sql  create_postgresql_db.sql  create_postgressqal_config_table.sql  createsqlitedb.py  dbhandler.py  dbmanager.py  main.py  pyproject.toml  replitdb_manager.py  requirements.txt  requirments.txt  setup_for_dev_container.sh  sqlite.db
handlers/: commandhandler.py  confighandler.py  dbhandler.py  embeddinghandler.py  file_dbaccess.py  imagehandler.py
