[tool.poetry]
name = "repl_nix_chatgpt4bot"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"
openai = "^0.27.2"
python-dotenv = "^1.0.0"
twilio = "^7.16.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
